--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -1,3 +1,4 @@
+
 /*testest*/
 
 .side .titlebox h6 {position:fixed;z-index:1000;bottom:-270px;right:350px;display:block;width:240px;height:286px;padding:0;background:transparent url(%%dolphin%%) no-repeat top left;font-size:0;text-indent:-9999px;overflow:hidden; transition: bottom 1s;}
@@ -231,6 +232,16 @@ Float: left;
 Width: 120px;
 Height: 88px;
 background-image: url(%%best%%) !important
+}
+
+a[href="gaaay"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 324px;
+Height: 199px;
+background-image: url(%%gaaay%%) !important
 }
 
 a[href|="killerrabbit"] {
