--- a/source-css/bloomjackquisition.css
+++ b/source-css/bloomjackquisition.css
@@ -603,7 +603,7 @@ a[href="/summerbitches"]{
 }
 
 a[href="/superbloom"],
-a[href="/abreally"],
+a[href="/abreallynow"],
 a[href="/appleseedhug"],
 a[href="/abreluctant"],
 a[href="/filliesincognito"],
@@ -643,7 +643,7 @@ a[href="/superbloom"]{
     width:93px;
     background-position:0px 0px;
 }
-a[href="/abreally"]{
+a[href="/abreallynow"]{
     width:90px;
     background-position:-100px 0px;
 }
@@ -752,6 +752,35 @@ a[href="/pinkiebloomhug"]{
     width:200px;
     height:171px;
     background-position:-400px -600px;
+}
+
+a[href="/abwetmane"],
+a[href="/abnervous"],
+a[href="/abbounce"],
+a[href="/abnap"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:100px;
+    height:100px;
+    background-image: url(%%sheet3-4%%) !important;
+}
+
+a[href="/abwetmane"]{
+    width:150px;
+    height:138px;
+    background-position:0px 0px;
+}
+a[href="/abnervous"]{
+    background-position:-200px 0px;
+}
+a[href="/abbounce"]{
+    height:98px;
+    background-position:-100px -200px;
+}
+a[href="/abnap"]{
+    height:97px;
+    background-position:0px -200px;
 }
 
 /* Blame /u/kekerino for these */
