--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -461,7 +461,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/starlightrage"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/starlightrage"], a[href|="/scratchhide"], a[href|="/octavia0"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -558,7 +558,7 @@ a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Misfits l */
-a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"], a[href|="/bloombow"], a[href|="/sockies"], a[href|="/enormoussnake"], a[href|="/eponawearsitbetter"], a[href|="/applebat"]
+a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"], a[href|="/bloombow"], a[href|="/sockies"], a[href|="/enormoussnake"], a[href|="/eponawearsitbetter"], a[href|="/applebat"], a[href|="/fuzzybutts"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /*
@@ -674,11 +674,11 @@ a[href|="/shibemena"], a[href|="/rdtwistare"], a[href|="/firefox"], a[href|="/st
 {background-position: -200% -800%;}
 
 /* Grid pos 0,9 'motes */
-a[href|="/shibepie"], a[href|="/rdtwiponder"], a[href|="/derpyhasmuffin"]
+a[href|="/shibepie"], a[href|="/rdtwiponder"], a[href|="/derpyhasmuffin"], a[href|="/scratchhide"]
 {background-position: -0% -900%;}
 
 /* Grid pos 1,9 'motes */
-a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"]
+a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"], a[href|="/octavia0"]
 {background-position: -100% -900%;}
 
 /* Grid pos 2,9 'motes */
@@ -1257,3 +1257,4 @@ a[href|="/sockies"] {width:200px;height:140px;background-position: -319px -373px
 a[href|="/enormoussnake"] {width:125px;height:112px;background-position: -194px -392px;}
 a[href|="/eponawearsitbetter"] {width:165px;height:200px;background-position: -519px -405px;}
 a[href|="/applebat"] {width:150px;height:130px;background-position: 0 -452px;}
+a[href|="/fuzzybutts"] {width:150px;height:97px;background-position: -150px -504px;}
