--- a/source-css/scootalounge.css
+++ b/source-css/scootalounge.css
@@ -354,6 +354,7 @@ a[href="/wonderscoots"]{background-position:-400% -300%;}
 a[href="/scootatimer"],
 a[href="/scootacookie2"],
 a[href="/scootingscoots"],
+a[href="/plasmahawk"],
 a[href="/scootawhip"],
 a[href="/scootabat2"],
 a[href="/scootabow2"],
@@ -371,7 +372,7 @@ a[href="/scootahanging"]
 }
 a[href="/scootatimer"]{background-position:0% 0%;}
 a[href="/scootacookie2"]{background-position:-100% 0%;}
-a[href="/scootingscoots"]{background-position:-200% 0%;}
+a[href="/scootingscoots"],a[href="/plasmahawk"]{background-position:-200% 0%;}
 a[href="/scootawhip"]{background-position:-300% 0%;}
 a[href="/scootabat2"]{background-position:-400% 0%;}
 a[href="/scootabow2"]{background-position:0% -100%;}
