--- a/source-css/ariablaze.css
+++ b/source-css/ariablaze.css
@@ -200,6 +200,27 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[h
 .flair-silverstar
 {background-position:0 -1700%}
 
+.flair-sunsetshimmer
+{background-position:0 -1800%}
+
+.flair-thunderlane
+{background-position:0 -1900%}
+
+.flair-starlightglimmer
+{background-position:0 -2000%}
+
+.flair-nightglider
+{background-position:0 -2100%}
+
+.flair-surprise
+{background-position:0 -2200%}
+
+.flair-lightning
+{background-position:0 -2300%}
+
+.flair-ariablaze
+{background-position:0 -2400%}
+
 a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],.flair-twilight
 {background-position:-100% 0}
 
@@ -254,6 +275,27 @@ a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[h
 .flair-soarin
 {background-position:-100% -1700%}
 
+.flair-cheesesandwich
+{background-position:-100% -1800%}
+
+.flair-applefritter
+{background-position:-100% -1900%}
+
+.flair-equality
+{background-position:-100% -2000%}
+
+.flair-partyfavor
+{background-position:-100% -2100%}
+
+.flair-snowdrop
+{background-position:-100% -2200%}
+
+.flair-peachbottom
+{background-position:-100% -2300%}
+
+.flair-sonatadusk
+{background-position:-100% -2400%}
+
 a[href|="/flutterjerk"],a[href|="/rflutterjerk"],a[href|="/rarityyell"],a[href|="/rrarityyell"],a[href|="/rdannoyed"],a[href|="/rrdannoyed"],a[href|="/snails"],a[href|="/rsnails"],.flair-fluttershy
 {background-position:-200% 0}
 
@@ -304,6 +346,24 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 
 .flair-spitfire
 {background-position:-200% -1600%}
+
+.flair-maud
+{background-position:-200% -1700%}
+
+.flair-flashsentry
+{background-position:-200% -1800%}
+
+.flair-flutterbat
+{background-position:-200% -1900%}
+
+.flair-doublediamond
+{background-position:-200% -2000%}
+
+.flair-roidrage
+{background-position:-200% -2200%}
+
+.flair-harshwhinny
+{background-position:-200% -2300%}
 
 a[href|="/flutterroll"],a[href|="/rflutterroll"],a[href|="/fluttershy"],a[href|="/rfluttershy"],a[href|="/trixiesad"],a[href|="/rtrixiesad"],a[href|="/twisad"],a[href|="/rtwisad"],.flair-applejack
 {background-position:-300% 0}
@@ -356,68 +416,23 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 .flair-mayor
 {background-position:-300% -1600%}
 
-.flair-sunsetshimmer
-{background-position:0 -1800%}
-
-.flair-snowdrop
-{background-position:-200% -1900%}
-
-.flair-flashsentry
-{background-position:-200% -1800%}
+.flair-spike
+{background-position:-300% -1700%}
 
 .flair-coco
 {background-position:-300% -1800%}
 
-.flair-surprise
-{background-position:0 -1900%}
-
-.flair-fritter
-{background-position:-100% -1900%}
-
-.flair-cheesesandwich
-{background-position:-100% -1800%}
-
-.flair-maud
-{background-position:-200% -1700%}
-
-.flair-spike
-{background-position:-300% -1700%}
-
 .flair-blossomforth
 {background-position:-300% -1900%}
 
-.flair-roidrage
-{background-position:0 -2000%}
-
-.flair-discord
-{background-position:-100% -2000%}
-
-.flair-lightning
-{background-position:-200% -2000%}
-
-.flair-peachbottom
+.flair-sugarbelle
 {background-position:-300% -2000%}
 
-.flair-harshwhinny
-{background-position:0 -2100%}
-
-.flair-thunderlane
-{background-position:-100% -2100%}
-
-.flair-flutterbat
-{background-position:-200% -2100%}
+.flair-discord
+{background-position:-300% -2200%}
 
 .flair-adagiodazzle
-{background-position:0 -2200%}
-
-.flair-ariablaze
-{background-position:-100% -2200%}
-
-.flair-sonatadusk
-{background-position:-200% -2200%}
-
-.flair-starlightglimmer
-{background-position:-300% -2200%}
+{background-position:-300% -2300%}
 
 /*---------------- END COPY ----------------*/
 
