--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -353,30 +353,30 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 }
 
 .flair-rainbowdash { background-position: 0 0; }
-.flair-twilightsparkle { background-position: -100% 0; }
+.flair-twilight { background-position: -100% 0; }
 .flair-fluttershy { background-position: -200% 0; }
 .flair-applejack { background-position: -300% 0; }
 .flair-pinkiepie { background-position: 0 -100%; }
 .flair-rarity { background-position: -100% -100%; }
 .flair-trixie { background-position: -200% -100%; }
-.flair-princessluna { background-position: 0 -200%; }
-.flair-princesscelestia { background-position: -100% -200%; }
-.flair-derpyhooves { background-position: -200% -200%; }
-.flair-vinylscratch { background-position: -300% -200%; }
-.flair-lyraheartstrings { background-position: 0 -300%; }
-.flair-sweetiedrops { background-position: -100% -300%; }
-.flair-octaviamelody { background-position: -200% -300%; }
-.flair-doctorwhooves { background-position: -300% -300%; }
-.flair-bigmcintosh { background-position: 0 -400%; }
-.flair-minuette { background-position: -100% -400%; }
-.flair-berrypunch { background-position: -200% -400%; }
-.flair-pokeypierce { background-position: -300% -400%; }
+.flair-luna { background-position: 0 -200%; }
+.flair-celestia { background-position: -100% -200%; }
+.flair-derpy { background-position: -200% -200%; }
+.flair-vinyl { background-position: -300% -200%; }
+.flair-lyra { background-position: 0 -300%; }
+.flair-bonbon { background-position: -100% -300%; }
+.flair-octavia { background-position: -200% -300%; }
+.flair-doctor { background-position: -300% -300%; }
+.flair-mac { background-position: 0 -400%; }
+.flair-colgate { background-position: -100% -400%; }
+.flair-berry { background-position: -200% -400%; }
+.flair-pokey { background-position: -300% -400%; }
 .flair-roseluck { background-position: 0 -500%; }
 .flair-zecora { background-position: -100% -500%; }
-.flair-seaswirl { background-position: -200% -500%; }
-.flair-goldenharvest { background-position: -300% -500%; }
+.flair-seafoam { background-position: -200% -500%; }
+.flair-carrottop { background-position: -300% -500%; }
 .flair-screwball { background-position: 0 -600%; }
-.flair-nurseredheart { background-position: -100% -600%; }
+.flair-redheart { background-position: -100% -600%; }
 .flair-caramel { background-position: -200% -600%; }
 .flair-braeburn { background-position: -300% -600%; }
 .flair-wonderbolts { background-position: 0 -700%; }
@@ -387,10 +387,10 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-davenport { background-position: -100% -800%; }
 .flair-cheerilee { background-position: -200% -800%; }
 .flair-nightmaremoon { background-position: -300% -800%; }
-.flair-princeblueblood { background-position: 0 -900%; }
-.flair-daringdo { background-position: -100% -900%; }
-.flair-carrotcake { background-position: -200% -900%; }
-.flair-cupcake { background-position: -300% -900%; }
+.flair-blueblood { background-position: 0 -900%; }
+.flair-daring { background-position: -100% -900%; }
+.flair-mrcake { background-position: -200% -900%; }
+.flair-mrscake { background-position: -300% -900%; }
 .flair-flam { background-position: 0 -1000%; }
 .flair-flim { background-position: -100% -1000%; }
 .flair-silverspoon { background-position: -200% -1000%; }
@@ -398,46 +398,51 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-snips { background-position: 0 -1100%; }
 .flair-snails { background-position: -100% -1100%; }
 .flair-twist { background-position: -200% -1100%; }
-.flair-truffleshuffle { background-position: -300% -1100%; }
-.flair-amethyststar { background-position: 0 -1200%; }
-.flair-hairytipper { background-position: -100% -1200%; }
+.flair-gaben { background-position: -300% -1100%; }
+.flair-sparkler { background-position: 0 -1200%; }
+.flair-disco { background-position: -100% -1200%; }
 .flair-fancypants { background-position: -200% -1200%; }
-.flair-fleurdelis { background-position: -300% -1200%; }
-.flair-princesscadance { background-position: 0 -1300%; }
+.flair-fleur { background-position: -300% -1200%; }
+.flair-cadence { background-position: 0 -1300%; }
 .flair-shiningarmor { background-position: -100% -1300%; }
 .flair-filthyrich { background-position: -200% -1300%; }
 .flair-hoitytoity { background-position: -300% -1300%; }
 .flair-cloudchaser { background-position: 0 -1400%; }
 .flair-flitter { background-position: -100% -1400%; }
-.flair-lilyvalley { background-position: -200% -1400%; }
+.flair-lily { background-position: -200% -1400%; }
 .flair-grannysmith { background-position: -300% -1400%; }
 .flair-daisy { background-position: 0 -1500%; }
-.flair-queenchrysalis { background-position: -100% -1500%; }
-.flair-lotusblossom { background-position: -200% -1500%; }
+.flair-chrysalis { background-position: -100% -1500%; }
+.flair-lotus { background-position: -200% -1500%; }
 .flair-aloe { background-position: -300% -1500%; }
 .flair-drstable { background-position: 0 -1600%; }
 .flair-sewnsow { background-position: -100% -1600%; }
 .flair-spitfire { background-position: -200% -1600%; }
-.flair-mayormare { background-position: -300% -1600%; }
+.flair-mayor { background-position: -300% -1600%; }
 .flair-soarin { background-position: -100% -1700%; }
-.flair-maudpie { background-position: -200% -1700%; }
+.flair-maud { background-position: -200% -1700%; }
 .flair-spike { background-position: -300% -1700%; }
 .flair-sunsetshimmer { background-position: 0 -1800%; }
 .flair-cheesesandwich { background-position: -100% -1800%; }
 .flair-flashsentry { background-position: -200% -1800%; }
-.flair-cocopommel { background-position: -300% -1800%; }
-.flair-surprise { background-position: 0 -1900%; }
+.flair-coco { background-position: -300% -1800%; }
+.flair-thunderlane { background-position: 0 -1900%; }
 .flair-applefritter { background-position: -100% -1900%; }
-.flair-snowdrop { background-position: -200% -1900%; }
+.flair-flutterbat { background-position: -200% -1900%; }
 .flair-blossomforth { background-position: -300% -1900%; }
-.flair-roidrage {background-position: 0 -2000%}
-.flair-discord {background-position: -100% -2000%}
-.flair-lightning {background-position: -200% -2000%}
-.flair-peachbottom {background-position: -300% -2000%}
-.flair-harshwhinny {background-position: 0 -2100%}
-.flair-thunderlane {background-position: -100% -2100%}
-.flair-flutterbat {background-position: -200% -2100%}
-.flair-adagiodazzle {background-position:0% -2200%}
-.flair-ariablaze {background-position:-100% -2200%}
-.flair-sonatadusk {background-position:-200% -2200%}
-.flair-starlightglimmer { background-position: -300% -2200%; }
+.flair-starlightglimmer { background-position: 0 -2000%; }
+.flair-equality { background-position: -100% -2000%; }
+.flair-doublediamond { background-position: -200% -2000%; }
+.flair-sugarbelle { background-position: -300% -2000%; }
+.flair-nightglider { background-position: 0 -2100%; }
+.flair-partyfavor { background-position: -100% -2100%; }
+.flair-surprise { background-position: 0 -2200%; }
+.flair-snowdrop { background-position: -100% -2200%; }
+.flair-roidrage { background-position: -200% -2200%; }
+.flair-discord { background-position: -300% -2200%; }
+.flair-lightning { background-position: 0 -2300%; }
+.flair-peachbottom { background-position: -100% -2300%; }
+.flair-harshwhinny { background-position: -200% -2300%; }
+.flair-adagiodazzle { background-position: -300% -2300%; }
+.flair-ariablaze { background-position: 0 -2400%; }
+.flair-sonatadusk { background-position: -100% -2400%; }
