--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -826,9 +826,9 @@ textarea {
 .side .md table:nth-of-type(2) tr:nth-of-type(14) td:nth-of-type(3):after{content:"reallyshy"}
 .side .md table:nth-of-type(2) tr:nth-of-type(14) td:nth-of-type(4):after{content:"appleliar"}
 .side .md table:nth-of-type(2) tr:nth-of-type(14) td:nth-of-type(5):after{content:"soawesome"}
-.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(2):after{content:"ajwut"}
-.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(3):after{content:"twisquint"}
-.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(4):after{content:"raritywhine"}
+.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(2):after{content:"vpluna"}
+.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(3):after{content:" "}
+.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(4):after{content:" "}
 .side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(5):after{content:"rdcool"}
 .side .md table:nth-of-type(2) tr:nth-of-type(18) td:nth-of-type(2):after{content:"abwut"}
 .side .md table:nth-of-type(2) tr:nth-of-type(18) td:nth-of-type(3):after{content:"manspike"}
@@ -844,7 +844,7 @@ textarea {
 
 /*emotes and flair*/
 
-/*---------------- Standardized Segment ----------------*/
+/*---------------- Standardized Segment (plus tables) ----------------*/
 
 .md { overflow: auto }
 .usertext-edit .md { overflow: inherit }
@@ -936,6 +936,27 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[h
 .flair-silverstar
 {background-position:0 -1700%}
 
+.flair-sunsetshimmer
+{background-position:0 -1800%}
+
+.flair-thunderlane
+{background-position:0 -1900%}
+
+.flair-starlightglimmer
+{background-position:0 -2000%}
+
+.flair-nightglider
+{background-position:0 -2100%}
+
+.flair-surprise
+{background-position:0 -2200%}
+
+.flair-lightning
+{background-position:0 -2300%}
+
+.flair-ariablaze
+{background-position:0 -2400%}
+
 a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],.flair-twilight,.side .md tr:nth-of-type(1) td:nth-of-type(3):after
 {background-position:-100% 0}
 
@@ -991,6 +1012,27 @@ a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[h
 .flair-soarin
 {background-position:-100% -1700%}
 
+.flair-cheesesandwich
+{background-position:-100% -1800%}
+
+.flair-applefritter
+{background-position:-100% -1900%}
+
+.flair-equality
+{background-position:-100% -2000%}
+
+.flair-partyfavor
+{background-position:-100% -2100%}
+
+.flair-snowdrop
+{background-position:-100% -2200%}
+
+.flair-peachbottom
+{background-position:-100% -2300%}
+
+.flair-sonatadusk
+{background-position:-100% -2400%}
+
 a[href|="/flutterjerk"],a[href|="/rflutterjerk"],a[href|="/rarityyell"],a[href|="/rrarityyell"],a[href|="/rdannoyed"],a[href|="/rrdannoyed"],a[href|="/snails"],a[href|="/rsnails"],.flair-fluttershy,.side .md tr:nth-of-type(1) td:nth-of-type(4):after
 {background-position:-200% 0}
 
@@ -1041,6 +1083,24 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 
 .flair-spitfire
 {background-position:-200% -1600%}
+
+.flair-maud
+{background-position:-200% -1700%}
+
+.flair-flashsentry
+{background-position:-200% -1800%}
+
+.flair-flutterbat
+{background-position:-200% -1900%}
+
+.flair-doublediamond
+{background-position:-200% -2000%}
+
+.flair-roidrage
+{background-position:-200% -2200%}
+
+.flair-harshwhinny
+{background-position:-200% -2300%}
 
 a[href|="/flutterroll"],a[href|="/rflutterroll"],a[href|="/fluttershy"],a[href|="/rfluttershy"],a[href|="/trixiesad"],a[href|="/rtrixiesad"],a[href|="/twisad"],a[href|="/rtwisad"],.flair-applejack
 {background-position:-300% 0}
@@ -1093,68 +1153,23 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 .flair-mayor
 {background-position:-300% -1600%}
 
-.flair-sunsetshimmer
-{background-position:0 -1800%}
-
-.flair-snowdrop
-{background-position:-200% -1900%}
-
-.flair-flashsentry
-{background-position:-200% -1800%}
+.flair-spike
+{background-position:-300% -1700%}
 
 .flair-coco
 {background-position:-300% -1800%}
 
-.flair-surprise
-{background-position:0 -1900%}
-
-.flair-fritter
-{background-position:-100% -1900%}
-
-.flair-cheesesandwich
-{background-position:-100% -1800%}
-
-.flair-maud
-{background-position:-200% -1700%}
-
-.flair-spike
-{background-position:-300% -1700%}
-
 .flair-blossomforth
 {background-position:-300% -1900%}
 
-.flair-roidrage
-{background-position:0 -2000%}
-
-.flair-discord
-{background-position:-100% -2000%}
-
-.flair-lightning
-{background-position:-200% -2000%}
-
-.flair-peachbottom
+.flair-sugarbelle
 {background-position:-300% -2000%}
 
-.flair-harshwhinny
-{background-position:0 -2100%}
-
-.flair-thunderlane
-{background-position:-100% -2100%}
-
-.flair-flutterbat
-{background-position:-200% -2100%}
+.flair-discord
+{background-position:-300% -2200%}
 
 .flair-adagiodazzle
-{background-position:0 -2200%}
-
-.flair-ariablaze
-{background-position:-100% -2200%}
-
-.flair-sonatadusk
-{background-position:-200% -2200%}
-
-.flair-starlightglimmer
-{background-position:-300% -2200%}
+{background-position:-300% -2300%}
 
 /*---------------- END COPY ----------------*/
 
@@ -1200,7 +1215,7 @@ a[href|="/eg09"],a[href|="/ohmyshy"],a[href|="/reg09"],a[href|="/rohmyshy"] {bac
 a[href|="/eg19"],a[href|="/dogdance"],a[href|="/reg19"],a[href|="/rdogdance"] {background-position: -70px -630px}
 a[href|="/eg29"],a[href|="/twiheh"],a[href|="/reg29"],a[href|="/rtwiheh"] {background-position: -140px -630px}
 
-a[href|="/egb00"],a[href|="/flash"],a[href|="/egb10"],a[href|="/gsmith"],a[href|="/egb20"],a[href|="/meangirl"],a[href|="/egb01"],a[href|="/bigbrother"],a[href|="/egb11"],a[href|="/powerfultrix"],a[href|="/egb21"],a[href|="/shyhurt"],a[href|="/egb02"],a[href|="/flutterface"],a[href|="/egb12"],a[href|="/grrr"],a[href|="/egb22"],a[href|="/bookz"],a[href|="/egb03"],a[href|="/noparty"],a[href|="/egb13"],a[href|="/suavespike"],a[href|="/egb23"],a[href|="/gah"],a[href|="/egb04"],a[href|="/twinope"],a[href|="/egb14"],a[href|="/imawesome"],a[href|="/egb24"],a[href|="/ajserious"],a[href|="/egb05"],a[href|="/wonderwink"],a[href|="/egb15"],a[href|="/sunset"],a[href|="/egb25"],a[href|="/ohmydog"],a[href|="/egb06"],a[href|="/dashcool"],a[href|="/egb16"],a[href|="/reallyshy"],a[href|="/egb26"],a[href|="/appleliar"],a[href|="/regb00"],a[href|="/rflash"],a[href|="/regb10"],a[href|="/rgsmith"],a[href|="/regb20"],a[href|="/rmeangirl"],a[href|="/regb01"],a[href|="/rbigbrother"],a[href|="/regb11"],a[href|="/rpowerfultrix"],a[href|="/regb21"],a[href|="/rshyhurt"],a[href|="/regb02"],a[href|="/rflutterface"],a[href|="/regb12"],a[href|="/rgrrr"],a[href|="/regb22"],a[href|="/rbookz"],a[href|="/regb03"],a[href|="/rnoparty"],a[href|="/regb13"],a[href|="/rsuavespike"],a[href|="/regb23"],a[href|="/rgah"],a[href|="/regb04"],a[href|="/rtwinope"],a[href|="/regb14"],a[href|="/rimawesome"],a[href|="/regb24"],a[href|="/rajserious"],a[href|="/regb05"],a[href|="/rwonderwink"],a[href|="/regb15"],a[href|="/rsunset"],a[href|="/regb25"],a[href|="/rohmydog"],a[href|="/regb06"],a[href|="/rdashcool"],a[href|="/regb16"],a[href|="/rreallyshy"],a[href|="/regb26"],a[href|="/rappleliar"] {
+a[href|="/egb00"],a[href|="/flash"],a[href|="/egb10"],a[href|="/gsmith"],a[href|="/egb20"],a[href|="/meangirl"],a[href|="/egb01"],a[href|="/bigbrother"],a[href|="/egb11"],a[href|="/powerfultrix"],a[href|="/egb21"],a[href|="/shyhurt"],a[href|="/egb02"],a[href|="/flutterface"],a[href|="/egb12"],a[href|="/grrr"],a[href|="/egb22"],a[href|="/bookz"],a[href|="/egb03"],a[href|="/noparty"],a[href|="/egb13"],a[href|="/suavespike"],a[href|="/egb23"],a[href|="/gah"],a[href|="/egb04"],a[href|="/twinope"],a[href|="/egb14"],a[href|="/imawesome"],a[href|="/egb24"],a[href|="/ajserious"],a[href|="/egb05"],a[href|="/wonderwink"],a[href|="/egb15"],a[href|="/sunset"],a[href|="/egb25"],a[href|="/ohmydog"],a[href|="/egb06"],a[href|="/dashcool"],a[href|="/egb16"],a[href|="/reallyshy"],a[href|="/egb26"],a[href|="/appleliar"],a[href|="/regb00"],a[href|="/rflash"],a[href|="/regb10"],a[href|="/rgsmith"],a[href|="/regb20"],a[href|="/rmeangirl"],a[href|="/regb01"],a[href|="/rbigbrother"],a[href|="/regb11"],a[href|="/rpowerfultrix"],a[href|="/regb21"],a[href|="/rshyhurt"],a[href|="/regb02"],a[href|="/rflutterface"],a[href|="/regb12"],a[href|="/rgrrr"],a[href|="/regb22"],a[href|="/rbookz"],a[href|="/regb03"],a[href|="/rnoparty"],a[href|="/regb13"],a[href|="/rsuavespike"],a[href|="/regb23"],a[href|="/rgah"],a[href|="/regb04"],a[href|="/rtwinope"],a[href|="/regb14"],a[href|="/rimawesome"],a[href|="/regb24"],a[href|="/rajserious"],a[href|="/regb05"],a[href|="/rwonderwink"],a[href|="/regb15"],a[href|="/rsunset"],a[href|="/regb25"],a[href|="/rohmydog"],a[href|="/regb06"],a[href|="/rdashcool"],a[href|="/regb16"],a[href|="/rreallyshy"],a[href|="/regb26"],a[href|="/rappleliar"],a[href|="/egb07"],a[href|="/viceprincipalluna"],a[href|="/vpluna"],a[href|="/theveep"] {
   display: block;
   clear: none;
   float: left;
@@ -1230,6 +1245,7 @@ a[href|="/egb25"],a[href|="/ohmydog"],a[href|="/regb25"],a[href|="/rohmydog"] {b
 a[href|="/egb06"],a[href|="/dashcool"],a[href|="/regb06"],a[href|="/rdashcool"] {background-position: 0px -420px}
 a[href|="/egb16"],a[href|="/reallyshy"],a[href|="/regb16"],a[href|="/rreallyshy"] {background-position: -70px -420px}
 a[href|="/egb26"],a[href|="/appleliar"],a[href|="/regb26"],a[href|="/rappleliar"]  {background-position: -140px -420px}
+a[href|="/egb07"],a[href|="/viceprincipalluna"],a[href|="/vpluna"],a[href|="/theveep"] {background-position: 0px -490px}
 
 a[href|="/egc00"],a[href|="/twilightrocks"],a[href|="/egc10"],a[href|="/rainbowrocks"],a[href|="/egc20"],a[href|="/pinkierocks"],a[href|="/regc00"],a[href|="/rtwilightrocks"],a[href|="/regc10"],a[href|="/rrainbowrocks"],a[href|="/regc20"],a[href|="/rpinkierocks"] {
   display: block;
