--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -77,10 +77,82 @@
     clear:left;
 } 
 
+/* Replace RES bacon */
+
+#baconBit {
+background-image: url(%%twibacon%%) !important;
+background-size: 256px 154px !important;
+width: 256px !important;
+height: 154px !important;
+-webkit-transition: all 3s linear;
+transition: all 3s linear;
+  animation: animationFrames linear 4s;
+  animation-iteration-count: 1;
+  transform-origin: 50% 50%;
+  -webkit-animation: animationFrames linear 4s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-transform-origin: 50% 50%;
+  -moz-animation: animationFrames linear 4s;
+  -moz-animation-iteration-count: 1;
+  -moz-transform-origin: 50% 50%;
+  -o-animation: animationFrames linear 4s;
+  -o-animation-iteration-count: 1;
+  -o-transform-origin: 50% 50%;
+  -ms-animation: animationFrames linear 4s;
+  -ms-animation-iteration-count: 1;
+  -ms-transform-origin: 50% 50%;
+}
+
+@keyframes animationFrames{
+  0% {
+    transform:  translate(0px,0px)  ;
+  }
+  100% {
+    transform:  translate(231px,137px)  ;
+  }
+}
+
+@-moz-keyframes animationFrames{
+  0% {
+    -moz-transform:  translate(0px,0px)  ;
+  }
+  100% {
+    -moz-transform:  translate(231px,137px)  ;
+  }
+}
+
+@-webkit-keyframes animationFrames {
+  0% {
+    -webkit-transform:  translate(0px,0px)  ;
+  }
+  100% {
+    -webkit-transform:  translate(231px,137px)  ;
+  }
+}
+
+@-o-keyframes animationFrames {
+  0% {
+    -o-transform:  translate(0px,0px)  ;
+  }
+  100% {
+    -o-transform:  translate(231px,137px)  ;
+  }
+}
+
+@-ms-keyframes animationFrames {
+  0% {
+    -ms-transform:  translate(0px,0px)  ;
+  }
+  100% {
+    -ms-transform:  translate(231px,137px)  ;
+  }
+}
+
+
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Sleepy Princesses"}
-div.titlebox .users-online span.number:after {content:" are Pancakes"}
+div.titlebox .subscribers span.number:after {content:" Ponies Dreaming"}
+div.titlebox .users-online span.number:after {content:" Having Nightmares"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -175,7 +247,7 @@ border-top-right-radius: 5px;
 
 #header-img
 { 
- margin:0px 10px 0px 10px;
+ margin:0px 10px -3px 10px;
 }
 
 /*
@@ -186,7 +258,7 @@ border-top-right-radius: 5px;
 }
 */
 
-#header-bottom-left{padding-top:30px}
+#header-bottom-left{padding-top:10px}
 .pagename {font-size:12pt}
 .titlebox form{position: static}
 .titlebox .usertext-body .md ol
@@ -230,13 +302,13 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%discentia-hat%%);
- width:60px;
- height:60px;
- margin-top:-35px;
+ background:url(%%kilroywashere%%);
+ width:70px;
+ height:46px;
+ margin-top:-21px;
  margin-left:5px;
  margin-bottom:0px;
- margin-right:-30px;
+ margin-right:-40px;
 }
 
 .thumbnail:empty{background-image:url(%%thumbnails%%)!important}
@@ -435,7 +507,7 @@ Submit and mod message buttons stolen from /r/StevenUniverse
 /* ===Submit Buttons=== */
 /*Adjust the following to how much room you need for them*/
 .side {
-    margin-top: 111px; /*This is more than needed*/
+    margin-top: 98px;
 }
 
 .submit-page .side { margin-top: 65px }
@@ -1738,4 +1810,3 @@ div.bottom span.author:after {
 }
 
 .md sup {line-height: inherit}
-
