--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -479,6 +479,27 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[h
   background-position:0 -1700%;
 }
 
+.flair-sunsetshimmer
+{background-position:0 -1800%}
+
+.flair-thunderlane
+{background-position:0 -1900%}
+
+.flair-starlightglimmer
+{background-position:0 -2000%}
+
+.flair-nightglider
+{background-position:0 -2100%}
+
+.flair-surprise
+{background-position:0 -2200%}
+
+.flair-lightning
+{background-position:0 -2300%}
+
+.flair-ariablaze
+{background-position:0 -2400%}
+
 a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],.flair-twilight,a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],.side .md table tr:nth-of-type(1) td:nth-of-type(2):after {
   background-position:-100% 0;
 }
@@ -551,6 +572,27 @@ a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[h
   background-position:-100% -1700%;
 }
 
+.flair-cheesesandwich
+{background-position:-100% -1800%}
+
+.flair-applefritter
+{background-position:-100% -1900%}
+
+.flair-equality
+{background-position:-100% -2000%}
+
+.flair-partyfavor
+{background-position:-100% -2100%}
+
+.flair-snowdrop
+{background-position:-100% -2200%}
+
+.flair-peachbottom
+{background-position:-100% -2300%}
+
+.flair-sonatadusk
+{background-position:-100% -2400%}
+
 a[href|="/flutterjerk"],a[href|="/rflutterjerk"],a[href|="/rarityyell"],a[href|="/rrarityyell"],a[href|="/rdannoyed"],a[href|="/rrdannoyed"],a[href|="/snails"],a[href|="/rsnails"],.flair-fluttershy,a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/sunsetsmug"],a[href|="/sunsetcontempt"],a[href|="/sssmug"],a[href|="/sscontempt"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after {
   background-position:-200% 0;
 }
@@ -618,6 +660,24 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 .flair-spitfire {
   background-position:-200% -1600%;
 }
+
+.flair-maud
+{background-position:-200% -1700%}
+
+.flair-flashsentry
+{background-position:-200% -1800%}
+
+.flair-flutterbat
+{background-position:-200% -1900%}
+
+.flair-doublediamond
+{background-position:-200% -2000%}
+
+.flair-roidrage
+{background-position:-200% -2200%}
+
+.flair-harshwhinny
+{background-position:-200% -2300%}
 
 a[href|="/flutterroll"],a[href|="/rflutterroll"],a[href|="/fluttershy"],a[href|="/rfluttershy"],a[href|="/trixiesad"],a[href|="/rtrixiesad"],a[href|="/twisad"],a[href|="/rtwisad"],.flair-applejack,a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after {
   background-position:-300% 0;
@@ -687,116 +747,34 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
   background-position:-300% -1600%;
 }
 
-.flair-sunsetshimmer {
-  background-position:0% -1800%;
-}
+.flair-spike
+{background-position:-300% -1700%}
 
-.flair-snowdrop {
-  background-position:-200% -1900%;
-}
+.flair-coco
+{background-position:-300% -1800%}
 
-.flair-flashsentry {
-  background-position:-200% -1800%;
-}
+.flair-blossomforth
+{background-position:-300% -1900%}
 
-.flair-coco {
-  background-position:-300% -1800%;
-}
+.flair-sugarbelle
+{background-position:-300% -2000%}
 
-.flair-soarin {
-  background-position:-100% -1700%;
-}
+.flair-discord
+{background-position:-300% -2200%}
 
-.flair-surprise {
-  background-position: 0 -1900%;
-}
+.flair-adagiodazzle
+{background-position:-300% -2300%}
 
-.flair-fritter {
-  background-position: -100% -1900%;
-}
-
-.flair-cheesesandwich {
-  background-position: -100% -1800%;
-}
-
-.flair-maud {
-  background-position: -200% -1700%;
-}
-
-.flair-spike {
-  background-position: -300% -1700%;
-}
-
-.flair-blossomforth {
-  background-position: -300% -1900%;
-}
-
-.flair-roidrage {
-  background-position: 0 -2000%;
-}
-
-.flair-discord {
-  background-position: -100% -2000%;
-}
-
-.flair-lightning {
-  background-position: -200% -2000%;
-}
-
-.flair-peachbottom {
-  background-position: -300% -2000%;
-}
-
-.flair-harshwhinny {
-  background-position: 0 -2100%;
-}
-
-.flair-thunderlane {
-  background-position: -100% -2100%;
-}
-
-.flair-flutterbat {
-  background-position: -200% -2100%;
-}
-
-.flair-adagiodazzle {
-  background-position:0% -2200%;
-}
-
-.flair-ariablaze {
-  background-position:-100% -2200%;
-}
-
-.flair-sonatadusk {
-  background-position:-200% -2200%;
-}
-
-.flair-starlightglimmer {
-  background-position: -300% -2200%;
-}
-
-.flair-100-emblem {
-  background-position: 0 -368px;
-  height:42px;width:32px;
-}
-
-.flair-100-sunset {
-  background-position: -32px -368px;
-  height:42px;
-  width:32px
-}
-
-.flair-200-emblem {
-  background-position: 0 -410px;
+.flair-100-emblem, .flair-100-sunset, .flair-200-emblem, .flair-200-sunset {
   height:42px;
   width:32px;
+  background-image:url(%%oddballs%%)!important;
 }
 
-.flair-200-sunset {
-  background-position: -32px -410px;
-  height:42px;
-  width:32px;
-}
+.flair-100-emblem { background-position: -856px -175px }
+.flair-100-sunset { background-position: -888px -175px }
+.flair-200-emblem { background-position: -856px -217px }
+.flair-200-sunset { background-position: -888px -217px }
 
 a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/sunsetstare"],a[href|="/ssstare"],a[href|="/sunsetbored"],a[href|="/ssbored"],a[href|="/sunsetpuppyeyes"],a[href|="/sspuppyeyes"],a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/sunsethappy"],a[href|="/sshappy"],a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/sleepysunset"],a[href|="/sleepyss"],a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/sunsetsneer"],a[href|="/sssneer"],a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/searchingsunset"],a[href|="/searchingss"],a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/sunsetshrug"],a[href|="/ssshrug"],a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/sunsetindeed"],a[href|="/ssindeed"],a[href|="/ifyouknowwhatimean"],a[href|="/sunsetwait"],a[href|="/sswait"],a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"],a[href|="/sunsetuhuh"],a[href|="/ssuhuh"],a[href|="/sunsetwow"],a[href|="/sswow"],a[href|="/sunsetsalute"],a[href|="/sssalute"],a[href|="/sunsetpokerstatic"],a[href|="/sspokerstatic"],a[href|="/sunsetdress"],a[href|="/ssdress"],a[href|="/sunsetquietgame"],a[href|="/ssquietgame"],a[href|="/sunsetupvote"],a[href|="/ssupvote"],a[href|="/sunsetwrongneighborhood"],a[href|="/sswrongneighborhood"],a[href|="/sunface"] {
   display:block;
